fixed bug footbar overlaping

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -42,6 +42,7 @@ a:hover {
 .content {
     width: 90%;
     margin: 0 auto;
+    margin-bottom: 60px;
 }
 
 .content h1 {
